<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="269" id="KGk-i7-Jjw" customClass="SearchCell" customModule="reciplease" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="320" height="500"/>
            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                <rect key="frame" x="0.0" y="0.0" width="320" height="500"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="ylO-aB-Lu3">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="282"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                <integer key="value" value="15"/>
                            </userDefinedRuntimeAttribute>
                        </userDefinedRuntimeAttributes>
                    </imageView>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nkL-Zw-i0A">
                        <rect key="frame" x="0.0" y="26" width="320" height="41"/>
                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="30"/>
                        <color key="textColor" systemColor="secondaryLabelColor"/>
                        <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="shadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <size key="shadowOffset" width="1" height="0.0"/>
                    </label>
                    <textField contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="UrW-AF-kJx">
                        <rect key="frame" x="9" y="108" width="225" height="40"/>
                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="ingredientsTextField"/>
                        <constraints>
                            <constraint firstAttribute="height" constant="40" id="tY7-4q-dq6"/>
                            <constraint firstAttribute="width" constant="225" id="vUz-KS-1z2"/>
                        </constraints>
                        <color key="textColor" systemColor="systemGray2Color"/>
                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                <integer key="value" value="10"/>
                            </userDefinedRuntimeAttribute>
                        </userDefinedRuntimeAttributes>
                    </textField>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JXx-Qe-fSz">
                        <rect key="frame" x="16" y="275" width="241.5" height="36"/>
                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="25"/>
                        <color key="textColor" systemColor="secondaryLabelColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <button opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lo0-Yc-xfv">
                        <rect key="frame" x="252" y="275" width="52" height="36"/>
                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="clear"/>
                        <constraints>
                            <constraint firstAttribute="width" constant="52" id="TL1-sI-VNo"/>
                            <constraint firstAttribute="height" constant="36" id="UkH-1V-J9k"/>
                        </constraints>
                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                        <state key="normal" title="Button">
                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        </state>
                        <connections>
                            <action selector="clearAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="SYd-tC-4bL"/>
                        </connections>
                    </button>
                    <button opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kh8-Du-VhJ">
                        <rect key="frame" x="255" y="113" width="46" height="33"/>
                        <color key="backgroundColor" red="0.34933763740000001" green="0.57565307619999995" blue="0.38428515200000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <accessibility key="accessibilityConfiguration" identifier="addButton"/>
                        <constraints>
                            <constraint firstAttribute="width" constant="46" id="3Qe-z1-7sb"/>
                        </constraints>
                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                        <state key="normal" title="button">
                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        </state>
                        <connections>
                            <action selector="addIngredients:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Tyc-cS-Xmg"/>
                        </connections>
                    </button>
                    <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4u-Tl-8XK">
                        <rect key="frame" x="16" y="331" width="288" height="158"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <color key="textColor" systemColor="secondaryLabelColor"/>
                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                    </textView>
                </subviews>
                <constraints>
                    <constraint firstItem="Lo0-Yc-xfv" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="0tq-jF-vqC"/>
                    <constraint firstAttribute="bottomMargin" secondItem="v4u-Tl-8XK" secondAttribute="bottom" id="1bv-aX-dLg"/>
                    <constraint firstItem="nkL-Zw-i0A" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="26" id="3Ft-fo-gKk"/>
                    <constraint firstAttribute="trailing" secondItem="nkL-Zw-i0A" secondAttribute="trailing" id="7XO-dl-bUB"/>
                    <constraint firstItem="ylO-aB-Lu3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="BFS-C0-vxy"/>
                    <constraint firstAttribute="trailingMargin" secondItem="JXx-Qe-fSz" secondAttribute="trailing" constant="46.5" id="Fic-cT-woT"/>
                    <constraint firstAttribute="trailing" secondItem="ylO-aB-Lu3" secondAttribute="trailing" id="Rmc-7I-xnD"/>
                    <constraint firstItem="Lo0-Yc-xfv" firstAttribute="centerY" secondItem="JXx-Qe-fSz" secondAttribute="centerY" id="SnQ-AJ-mkR"/>
                    <constraint firstItem="Kh8-Du-VhJ" firstAttribute="centerY" secondItem="UrW-AF-kJx" secondAttribute="centerY" constant="1.5" id="Vw9-ca-sFW"/>
                    <constraint firstItem="v4u-Tl-8XK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="YAq-Cz-cIU"/>
                    <constraint firstItem="Lo0-Yc-xfv" firstAttribute="top" secondItem="JXx-Qe-fSz" secondAttribute="top" id="YKK-ij-s2m"/>
                    <constraint firstItem="ylO-aB-Lu3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="YZL-pQ-see"/>
                    <constraint firstAttribute="trailingMargin" secondItem="v4u-Tl-8XK" secondAttribute="trailing" id="bkl-Zn-4eN"/>
                    <constraint firstItem="Kh8-Du-VhJ" firstAttribute="leading" secondItem="UrW-AF-kJx" secondAttribute="trailing" constant="21" id="bky-oW-Mzh"/>
                    <constraint firstItem="v4u-Tl-8XK" firstAttribute="top" secondItem="JXx-Qe-fSz" secondAttribute="bottom" constant="20" id="dYu-2c-8TJ"/>
                    <constraint firstItem="nkL-Zw-i0A" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ehU-7r-a5r"/>
                    <constraint firstItem="JXx-Qe-fSz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="nua-Rf-Gnh"/>
                    <constraint firstItem="Lo0-Yc-xfv" firstAttribute="top" secondItem="Kh8-Du-VhJ" secondAttribute="bottom" constant="129" id="nyn-AB-qzJ"/>
                    <constraint firstAttribute="trailingMargin" secondItem="Kh8-Du-VhJ" secondAttribute="trailing" constant="3" id="oAk-yK-7Mw"/>
                    <constraint firstAttribute="bottom" secondItem="Lo0-Yc-xfv" secondAttribute="bottom" constant="189" id="ycB-6v-ZFK"/>
                </constraints>
            </tableViewCellContentView>
            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
            <gestureRecognizers/>
            <connections>
                <outlet property="YourIngredients" destination="JXx-Qe-fSz" id="voW-a0-SCA"/>
                <outlet property="addButton" destination="Kh8-Du-VhJ" id="jjd-kd-N5O"/>
                <outlet property="clearButton" destination="Lo0-Yc-xfv" id="PrS-xg-CSb"/>
                <outlet property="homeImage" destination="ylO-aB-Lu3" id="37s-js-gcf"/>
                <outlet property="ingredients" destination="UrW-AF-kJx" id="Jg5-Dv-36d"/>
                <outlet property="ingredientsLists" destination="v4u-Tl-8XK" id="Pd6-s6-n4u"/>
                <outlet property="titleHeader" destination="nkL-Zw-i0A" id="atm-co-oev"/>
            </connections>
            <point key="canvasLocation" x="118.84057971014494" y="140.625"/>
        </tableViewCell>
    </objects>
    <resources>
        <image name="Image" width="500" height="282"/>
        <systemColor name="secondaryLabelColor">
            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
        <systemColor name="secondarySystemBackgroundColor">
            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemGray2Color">
            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
