...
            }
            // store in favorite
            storeFavorite(named: recipeName)
        } else {
            
            // else leave the image like that 
            sender.setImage(UIImage(named: "heart"), for: .normal)
            
            likedButton.isSelected = false
        }
       
      
        
...
